Bug 253516 - [IFC][Partial layout] InlineFormattingState should not hold on to display lines and boxes (not even temporarily)
Summary: [IFC][Partial layout] InlineFormattingState should not hold on to display lin...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-07 08:50 PST by zalan
Modified: 2023-03-08 21:20 PST (History)
5 users (show)

See Also:


Attachments
Patch (18.12 KB, patch)
2023-03-07 08:56 PST, zalan
no flags Details | Formatted Diff | Diff
[fast-cq]Patch (18.12 KB, patch)
2023-03-08 10:55 PST, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-03-07 08:50:16 PST
ssia
Comment 1 zalan 2023-03-07 08:56:30 PST
Created attachment 465341 [details]
Patch
Comment 2 zalan 2023-03-08 10:55:42 PST
Created attachment 465363 [details]
[fast-cq]Patch
Comment 3 EWS 2023-03-08 21:19:46 PST
Committed 261401@main (0b1a988b39fc): <https://commits.webkit.org/261401@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 465363 [details].
Comment 4 Radar WebKit Bug Importer 2023-03-08 21:20:18 PST
<rdar://problem/106482364>